# ai-scout

./: .gitignore  LICENSE  pyproject.toml
config/: default.config.yaml
migrations/: 20260605_01_create_topics_table.py  20260606_01_create_source_candidates_and_sources.py
src/ai_scout/: main.py
src/ai_scout/commands/: sources.py  topics.py
src/ai_scout/init/: setup.py  utils.py
src/ai_scout/storage/: migrations.py  models.py  repository.py
