[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scout"
version = "0.1.0"
description = "AI engineering intelligence and monitoring platform"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Your Name" }
]

dependencies = [
    # DB
    "yoyo-migrations>=9.0.0",

    # Config
    "pyyaml>=6.0.2",
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0","alembic>=1.13.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0"
]

[project.scripts]
ai-scout = "ai_scout.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true